--- a/docs/assets/scss/bootstrap/_dropdown.scss
+++ b/docs/assets/scss/bootstrap/_dropdown.scss
@@ -126,12 +126,12 @@
     @include gradient-bg($dropdown-link-hover-bg);
   }
 
-  &.active,
-  &:active {
-    color: $dropdown-link-active-color;
-    text-decoration: none;
-    @include gradient-bg($dropdown-link-active-bg);
-  }
+  // &.active,
+  // &:active {
+  //   color: $dropdown-link-active-color;
+  //   text-decoration: none;
+  //   @include gradient-bg($dropdown-link-active-bg);
+  // }
 
   &.disabled,
   &:disabled {
